# tweaks_cpp

./: .cursorignore  .cursorrules  CMakeLists.txt  README.md  main  main.cpp
docs/: template.md
include/core/: message.hpp
src/: main.cpp
src/core/: message.cpp
tests/: CMakeLists.txt  test_main.cpp
